2006-02-15  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/form.py (DomainField.checkValue): better error
	message (patch from Dave Cash)

2005-12-20  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/mvc/__init__.py: adding misnamed mvc service
	(m and v are missing).

2005-09-20  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/skunk/computils.py: convenience functions for dealing
	with AE.

2005-09-14  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/UrlBuilder.py: url function now htmlquotes.

2005-08-16  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py (_fixPath): fix for docroot escaping.

2005-05-10  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/Services/sessionHandler/PsycopgSessionStore.py:
	adding (contributed by Nick Murtagh).

2005-04-18  Jacob Smullyan  <smulloni@smullyan.org>
	
	* pylibs/formlib/validates.py (COUNTRY_CODES): typo fix for
	American Samoa.

2005-04-17  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SocketMan/SocketMan.py: now, rather than hard-coding `5'
	as the argument to listen(), use socket.SOMAXCONN, which is
	much more than 5 on many platforms.

	* SkunkWeb/Services/requestHandler/requestHandler.py
	(_processRequest): typo in error handling (backport from skunk4).

2005-04-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/Server.py (SkunkWebServer.run): fix for
	seteuid and setgid.  There was previously a guard in place to undo
	any seteuid before calling setuid, but not before calling
	setgid. (Backport from skunk4.)

2005-04-13  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/util/precompile.py.in: now sets runOutOfCache to 0.
	Obviously, if you are precompiling, running out of the cache makes
	absolutely zero sense.

2005-03-08  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/DT/DTLexer.py: fix so that when encountering <<:, the
	lexer would still find the begin tag.
	